# event-schemas

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
event_schemas/: __init__.py  booking.py  chat.py  external.py  meeting.py  normalized.py  notification.py  types.py
